EXTRA_DIST =							\
	compress.txt.bz2					\
	compress.txt.gz						\
	data.txt						\
	test-0.1-1.fc13.noarch.rpm				\
	test.spec						\
	yum.conf						\
	mirrorlist.txt						\
	metalink.xml						\
	licenses.txt						\
	yum-comps-groups.conf					\
	repos/fedora-updates.repo				\
	repos/fedora.repo					\
	fedora/comps-fedora.xml.gz				\
	fedora/filelists.sqlite.bz2				\
	fedora/filelists.xml.gz					\
	fedora/other.sqlite.bz2					\
	fedora/prestodelta.xml.gz				\
	fedora/primary.xml.gz					\
	fedora/updateinfo.xml					\
	${NULL}

CLEANFILES =	\
	fedora/primary.sqlite					\
	fedora/primary.xml					\
	fedora/other.sqlite					\
	fedora/filelists.sqlite					\
	fedora/filelists.xml					\
	fedora/comps-fedora.xml					\
	${NULL}

