EXTRA_DIST =							\
	downgrade.manifest					\
	downgrade-with-dep.manifest				\
	get-updates.manifest					\
	get-updates-with-obsolete.manifest			\
	get-updates-with-obsolete-multiarch.manifest		\
	get-updates-with-obsolete-subpackage.manifest		\
	install-arch-to-noarch.manifest				\
	install-exactarch-false.manifest			\
	install-exactarch-true.manifest				\
	install.manifest					\
	install-multiarch-basename-same.manifest		\
	install-multiarch.manifest				\
	install-multiple-provides.manifest			\
	install-onlyn.manifest					\
	install-onlyn-nothing.manifest				\
	install-onlyn-with-removal.manifest			\
	install-provide-dont-downgrade.manifest			\
	install-provide-newer-version.manifest			\
	install-provide-srpm-version.manifest			\
	install-two-that-conflict.manifest			\
	install-when-already-installed.manifest			\
	install-with-conflicted-installed.manifest		\
	install-with-conflicted-install.manifest		\
	install-with-dep-installed.manifest			\
	install-with-dep.manifest				\
	install-with-dep-multiple.manifest			\
	install-with-dep-multiple-provide-ver.manifest		\
	install-with-dep-native-arch.manifest			\
	install-with-dep-non-numeric.manifest			\
	install-with-file-dep.manifest				\
	install-with-highest-arch.manifest			\
	install-with-missing-versioned-dep.manifest		\
	install-with-old-conflicts.manifest			\
	install-with-older-version-installed.manifest		\
	install-with-remote-dep-with-remote-dep.manifest	\
	install-with-update.manifest				\
	install-with-virtual-dep.manifest			\
	parsing-whitespace.manifest				\
	remove-auto-deps-after-install.manifest			\
	remove-auto-deps-after-update.manifest			\
	remove-auto-deps.manifest				\
	remove.manifest						\
	remove-with-dep-half-provided.manifest			\
	remove-with-dep.manifest				\
	remove-with-dep-multiple-versions.manifest		\
	remove-with-dep-reverse.manifest			\
	remove-with-dep-with-dep.manifest			\
	remove-with-file-dep.manifest				\
	sanity-evrcmp.manifest					\
	update-causing-loop.manifest				\
	update-causing-subpackage-update.manifest		\
	update-causing-subpackage-update-multiarch.manifest	\
	update-causing-update.manifest				\
	update-empty-repos.manifest				\
	update-installed-where-dep-is-removed.manifest		\
	update-kernel-multiple-versions.manifest		\
	update-kernel-multiple-versions-remove.manifest		\
	update-kernel-not-debug.manifest			\
	update.manifest						\
	update-multiarch.manifest				\
	update-nothing.manifest					\
	update-package-rename.manifest				\
	update-package-where-dep-is-provided-by-installed.manifest	\
	update-self-obsolete.manifest				\
	update-single-multiple-deps.manifest			\
	update-single-required-by-installed.manifest		\
	update-two-packages-with-newer-version.manifest		\
	update-via-conflicts-fail.manifest			\
	update-via-conflicts.manifest				\
	update-where-dep-is-being-removed.manifest		\
	update-with-file-dep-in-update.manifest			\
	update-with-installed-version-newer.manifest		\
	update-with-missing-obsolete.manifest			\
	update-with-multiple-same.manifest			\
	update-with-new-dep.manifest				\
	update-with-new-dep-with-new-dep.manifest		\
	update-with-obsoleted-installed.manifest		\
	update-with-obsolete.manifest				\
	update-with-obsolete-replacement-gt.manifest		\
	update-with-obsolete-replacement-lt.manifest		\
	update-with-obsolete-replacement-multi.manifest		\
	update-with-old-version-requiring-installed.manifest	\
	update-with-unsatisfied-deps.manifest			\
	${NULL}

-include $(top_srcdir)/git.mk

